--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
-  "dependencies": {
-    "generator-code": "^1.11.9",
-    "vsce": "^2.15.0",
-    "yo": "^5.1.0"
+  "name": "baroesdatiltadinhathemes",
+  "displayName": "BaroesDaTiltadinhaThemes",
+  "description": "Tema criado para utilizar no VsCode pelo grupo de amigos chamado \"Barões da Tiltadinha\".",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.101.0"
+  },
+  "categories": [
+    "Themes"
+  ],
+  "contributes": {
+    "themes": [
+      {
+        "label": "BaroesDaTiltadinhaThemes",
+        "uiTheme": "vs-dark",
+        "path": "./themes/smaxy-color-theme.json"
+      }
+    ]
   }
 }
