refactor: atualizar rótulo do tema para "SmaxY Theme" no package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "BaroesDaTiltadinhaThemes",
+        "label": "SmaxY Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/smaxy-color-theme.json"
       }
